# toml-http-flow

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
apiwf/: __init__.py  cli.py  generator.py  httpclient.py  template.py  workflow.py
apiwf/templates/: runner.py.tmpl
docs/: 00_toml-http-flow_refactoring.md  01_generator_refactoring_plan.md  design.md  spec.md
docs/design/: 01-overview.md  02-architecture.md  03-toml-spec.md  04-template.md  05-cli.md  06-workflow-flow.md  07-script-generation.md  08-error-handling.md  09-testing.md  10-go-python-diff.md  11-extension-points.md
httpflow/: __init__.py  bash_generator.py  cli.py  config.py  embedded_runtime.py  generator.py  httpclient.py  masking.py  model.py  runner.py  template.py  until.py  workflow.py
httpflow/bashgen/: __init__.py  analysis.py  capture.py  conditions.py  names.py  placeholders.py  runtime.py  script.py  shell.py  steps.py
httpflow/runtime/: __init__.py  core.py  http.py  mask.py  repeat.py  until.py
httpflow/templates/: runner.py.tmpl  runner.sh.tmpl
tests/: _bash_generator_helpers.py  _helpers.py  test_bash_generator.py  test_bash_generator_basic.py  test_bash_generator_body.py  test_bash_generator_capture.py  test_bash_generator_embed.py  test_bash_generator_mask.py  test_bash_generator_runtime.py  test_cli.py  test_config.py  test_description.py  test_generator.py  test_httpclient.py  test_masking.py  test_pretty_json.py  test_repeat.py  test_runtime_http.py  test_sleep.py  test_template.py  test_until.py  test_workflow.py
