[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "httpflow"
version = "0.1.0"
description = "TOML-based HTTP workflow CLI tool (stdlib-only)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "xshoji" }]
keywords = ["toml", "http", "workflow", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
httpflow = "httpflow.cli:main"

[tool.setuptools.packages.find]
include = ["httpflow*"]

[tool.setuptools.package-data]
httpflow = ["templates/*.tmpl"]
